ProjetCompil/Verif/Test/fail/errLexical.cas
program
   A : 1..5;
   B : real;
begin
    NULL;
    £
end.